# Lit-Rift

./: .dockerignore  .gitignore  .releaserc.json  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTHENTICATION_TEST_PERMISSIONS.md  CHANGELOG.md  CHECKPOINT_4_DATABASE_OPTIMIZATION.md  CHECKPOINT_6_FRONTEND_AUTH.md  CHECKPOINT_7_AUTH_UI.md  CHECKPOINT_8_EMAIL_PASSWORD_RESET.md  CHECKPOINT_PRIORITY_1_2.md  CICD.md  COMPLETION_REPORT.md  COMPONENT_DOCUMENTATION.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.txt  DESKTOP_IMPLEMENTATION_COMPLETE.md  DEVELOPMENT_ROADMAP.md  DIAGNOSTICS_GUIDE.md  DOCKER_GUIDE.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICK_START.md  DOCKER_WINDOWS_SETUP.md  Dockerfile.backend  Dockerfile.desktop  Dockerfile.frontend  IMPLEMENTATION_SUMMARY.md  INDEX.md  LICENSE  MANIFEST.md  PHASE2_SHIPPING_CHECKLIST.md  PHASE2_TESTING_GUIDE.md  PRODUCTION_READY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  (+7 more)
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  .env.example  Dockerfile  app.py  lit-rift.spec  pyproject.toml  pytest.ini  requirements.txt
backend/db/: __init__.py  connection.py  schema.py
backend/models/: __init__.py  story_bible.py
backend/routes/: assets.py  auth.py  continuity.py  editor.py  export_routes.py  health.py  inspiration.py  story_bible.py  sync.py  visual_planning.py
backend/schemas/: editor_schemas.py  story_bible_schemas.py
backend/services/: ai_editor_service.py  background_sync.py  continuity_tracker_service.py  export_service.py  firebase_sync.py  story_bible_service.py  sync_service.py  visual_planning_service.py
backend/tests/: conftest.py  test_ai_editor_service.py  test_continuity_tracker_service.py  test_device_manager.py  test_routes.py  test_story_bible_service.py  test_visual_planning_service.py
backend/utils/: auth.py  device.py  rate_limiter.py  validation.py
desktop/: PROGRESS.md  QUICKSTART.md  README.md  TEST_RESULTS.md  VALIDATION_REPORT.md  build-desktop.bat  build-desktop.sh  env-manager.js  logger.js  main.js  package.json  preload.js  test-simulation.sh  validate.sh
(+105 files in other folders)
