[project]
name = "lit-rift-backend"
version = "1.0.0"
description = "AI-powered novel creation platform - Backend API"
authors = [
    { name = "Lit-Rift Team" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["writing", "ai", "novel", "creative-writing", "story-bible"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "python-dotenv==1.0.0",
    "google-generativeai==0.3.2",
    "firebase-admin==6.4.0",
    "gunicorn==21.2.0",
    "requests==2.31.0",
    "pillow==10.1.0",
    "pydub==0.25.1",
    "pypdf>=4.0.0",
    "ebooklib==0.18",
    "markdown==3.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov",
    "pytest-mock",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/sorrowscry86/Lit-Rift"
Documentation = "https://github.com/sorrowscry86/Lit-Rift#readme"
Repository = "https://github.com/sorrowscry86/Lit-Rift"
Issues = "https://github.com/sorrowscry86/Lit-Rift/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=services",
    "--cov=routes",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=90"
]

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 127
exclude = [".git", "__pycache__", "venv", ".venv", ".pytest_cache"]
ignore = ["E203", "W503"]
